--- a/apps/frontend/src/components/factories/CeremonyProgress/CeremonyProgress.scss
+++ b/apps/frontend/src/components/factories/CeremonyProgress/CeremonyProgress.scss
@@ -35,7 +35,7 @@
   }
 
   .ceremony-line {
-    width: 28px;
+    width: 44px;
     height: 3px;
     background-color: $gray-400;
     margin-bottom: 24px;
@@ -47,7 +47,7 @@
 
   .ceremony-label {
     white-space: nowrap;
-    font-size: 0.75rem;
+    font-size: 0.875rem;
     font-weight: 600;
   }
 }
